--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,11 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<=3.13"
+python = ">=3.10"
 tensorboard = "*"
 torch = ">=1.4.0"
 torchvision = ">=0.5.0" 
 numpy = ">=1.16.4"
-open3d = "*"
 rsl-rl-lib = { git = "https://github.com/leggedrobotics/rsl_rl.git", tag = "v3.1.3" }
 
 [tool.poetry.group.dev.dependencies]
