--- a/config/track_rl/genesis_env.yaml
+++ b/config/track_rl/genesis_env.yaml
@@ -14,6 +14,7 @@ vis_waypoints: True
 viewer_follow_drone: False
 show_cam_GUI: False
 fixed_init_pos: False
+use_trajectory: False
 # ======== depth cam params ========
 znear: 5.0 
 zfar: 0.1
@@ -23,7 +24,7 @@ load_map: False
 use_rc: False
 show_viewer: True
 render_cam: False
-controller: "rate"
+controller: "angle"
 min_dis: 0.8
 map_width: 3.5
 map_length: 3.5
