--- a/config/track_rl/flight.yaml
+++ b/config/track_rl/flight.yaml
@@ -57,13 +57,18 @@ weight: 0.5
 motor_inertia: 2.6e-07
 g: 9.81   
 kf: 3.16e-10
+TWR: 3.3
+min_t: 0.0
+max_t: 16.1865     # max thrust 
 base_rpm: 62293.9641914   # equal to (m*g/4*kf)^0.5
 inertia_matrix:       # no use
   - [0.0014, 0.0,     0.0,     0.0]
   - [0.0,    0.0014,  0.0,     0.0]
   - [0.0,    0.0,     0.00217, 0.0]
   - [0.0,    0.0,     0.0,     1.0]
-
+max_roll_rate: 10    # degree/s
+max_pitch_rate: 10   # degree/s
+max_yaw_rate: 3    # degree/s
 # =========== mavlink_param =============
 USB_path: "/dev/ttyUSB0"
 baudrate: 2000000
