--- a/config/track_rl/minco_params.yaml
+++ b/config/track_rl/minco_params.yaml
@@ -46,7 +46,37 @@ flight:
   omega_xy_limit: 10
 
 gains:
-  kp_pos: [5.0, 5.0, 5.0]
-  kd_pos: [5.0, 5.0, 6.0]
-  kp_att: [20.44, 20.44, 20.44]
+  # # aggressive in us
+  # kp_pos: [6.0, 6.0, 10.5]
+  # kd_pos: [1.1, 1.1, 1.1]
+  # kp_att: [25.44, 25.44, 25.44]
+  # kd_att: [0.8, 0.8, 0.8]
+  
+  # safe in so3
+  kp_pos: [5, 5, 8.5]
+  kd_pos: [1.0, 1.0, 1.0]
+  kp_att: [30.44, 30.44, 30.44]
   kd_att: [0.8, 0.8, 0.8]
+
+  # # aggressive in so3
+  # kp_pos: [5, 5, 8.5]
+  # kd_pos: [1.1, 1.1, 1.1]
+  # kp_att: [30.44, 30.44, 30.44]
+  # kd_att: [0.8, 0.8, 0.8]
+
+  # # safe in us (bad)
+  # kp_pos: [6, 6, 10.5]
+  # kd_pos: [1.1, 1.1, 1.1]
+  # kp_att: [25.44, 25.44, 25.44]
+  # kd_att: [0.8, 0.8, 0.8]
+
+  # kp_pos: [5, 5, 8.5]
+  # kd_pos: [0.5, 0.5, 0.5]
+  # kp_att: [25.44, 25.44, 25.44]
+  # kd_att: [0.8, 0.8, 0.8]
+
+# gains:
+#   kp_pos: [5.0, 5.0, 5.0]
+#   kd_pos: [5.0, 5.0, 6.0]
+#   kp_att: [20.44, 20.44, 20.44]
+#   kd_att: [0.8, 0.8, 0.8]
